--- a/style/output/index.css
+++ b/style/output/index.css
@@ -368,6 +368,8 @@ footer #social {
     display: flex;
     flex-direction: row;
     margin-bottom: 3rem;
+    flex-wrap: wrap;
+    justify-content: center;
   }
 }
 footer #social a {
@@ -391,6 +393,12 @@ footer #social a {
 footer #social a:nth-child(1) {
   font-family: "Manrope", sans-serif;
   font-size: 1.7rem;
+}
+@media only screen and (max-width: 62.5em) {
+  footer #social a:nth-child(1) {
+    width: 100%;
+    text-align: center;
+  }
 }
 footer #social a:before {
   padding: 5px 7px;
